--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc --reporter=html --reporter=text mocha 'test/**/*.js'",
     "start": "nodemon app.js",
     "production": "NODE_ENV='production' node app.js"
   },
@@ -18,5 +18,12 @@
     "morgan": "^1.10.0",
     "promise-mysql": "^4.1.3",
     "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.2.0",
+    "nyc": "^15.1.0",
+    "supertest": "^5.0.0"
   }
 }
