--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "bash db/reset_test_db.bash",
     "test": "nyc --reporter=html --reporter=text mocha 'test/**/*.js'",
     "start": "nodemon app.js",
     "production": "NODE_ENV='production' node app.js"
